update datesets path

--- a/configs/dataset/customized.yaml
+++ b/configs/dataset/customized.yaml
@@ -1,9 +1,13 @@
 name: customized
-data_path: ??? # path to the dataset
-preload_path: ??? # path to the preloaded data
-save_path: ./runs/exp # path to save the experiment results
+data_path: /kaggle/working/covid-cxr-image-dataset-research/COVID_IEEE
+preload_path: /kaggle/working/COVID_IEEE
+save_path: /kaggle/working/COVID_IEEE_PRELOAD
+
+# data_path: ??? # path to the dataset
+# preload_path: ??? # path to the preloaded data
+# save_path: ./runs/exp # path to save the experiment results
 input_size: 512 # image resolution for the LPM
-num_classes: ??? # number of classes
+num_classes: 3 # number of classes
 mean: 'auto' # 'auto' or a list of three numbers for RGB
 std: 'auto' # 'auto' or a list of three numbers for RGB
 learning_rate: 0.0001 # dataset-specific learning rate
