--- a/configs/dataset/customized.yaml
+++ b/configs/dataset/customized.yaml
@@ -1,7 +1,8 @@
 name: customized
-data_path: /kaggle/working/covid-cxr-image-dataset-research/COVID_IEEE
-preload_path: /kaggle/working/COVID_IEEE
-save_path: /kaggle/working/COVID_IEEE_PRELOAD
+
+data_path: /kaggle/working/COVID_IEEE
+preload_path: ./preload_data/covid
+save_path: ./runs/covid
 
 # data_path: ??? # path to the dataset
 # preload_path: ??? # path to the preloaded data
